# imago

./: .flake8  .gitattributes  .gitignore  .mcp.json  .pylintrc  AGENTS.md  AI_NAME_EXTRACTION_IMPLEMENTATION.md  CLAUDE.md  Cordell_Photo_Albums.skill  README.md  ai_models.json  basedpyrightconfig.json  cast.py  conftest.py  cosmic-ray.toml  imago.toml  justfile  mcp_console.py  mcp_console_ui.py  mcp_job_runner.py  mcp_server.py  merge_photo_albums_once.py  metadata.tsv  photoalbums.py  pyproject.toml  pyrightconfig.json  requirements.txt  session.sqlite  setup.py  test_simple_ai_name_suggestions.py
.agents/plugins/: marketplace.json
.antigravitycli/: 7d1b45fe-c5e7-4613-ac85-e16ddccbf14b.json
.basedpyright/: baseline.json
.claude/: settings.json  settings.local.json
.githooks/: pre-commit  pre-push
.pi-lens/: turn-state.json  worklog.jsonl
.pi-lens/cache/: knip.meta.json  python-rules-v1.json  session-start-guidance.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json
.tmp/pkginspect/: docstrange-1.1.8-py3-none-any.whl
cast/: AGENTS.md  README.md  __init__.py  cli.py  clustering.py  immich_sync.py  ingest.py  justfile  label_photos.py  matching.py  requirements.txt  server.py  storage.py  xmp_writer.py
cast/scripts/: check_pylint.py  test.ps1
cast/static/: index.html
cast/tests/: test_check_skylos.py  test_clustering.py  test_immich_sync.py  test_ingest.py  test_matching.py  test_server_people.py  test_server_review.py  test_server_source.py  test_server_suggestion_policy.py  test_storage.py  test_xmp_writer_regions.py
imago_mcp/: __init__.py  console.py  console_ui.py  job_runner.py  server.py
immich/: .env.example  .env.restore.example  .gitignore  README.md  backup.py  create_photo_albums.py  docker-compose.validate.yml  docker-compose.yml  justfile  restore.ps1
llama/: .env.example  .gitignore  README.md  filter.py  start.nu  start.ps1  start.sh
metadata/: 00-drive-manifest-sha3-256sums.txt
metadata/bennett_01_archive/: chapters.tsv  filter.avs
metadata/bennett_03_archive/: chapters.ffmetadata
metadata/bennett_05_archive/: chapters.ffmetadata
metadata/bennett_08_archive/: chapters.tsv
metadata/bennett_10_archive/: chapters.ffmetadata
metadata/bennett_11_archive/: chapters.tsv
metadata/bennett_12_archive/: chapters.ffmetadata
metadata/bennett_13_archive/: chapters.ffmetadata  chapters.tsv
metadata/bennett_14_archive/: chapters.tsv  comment.txt
metadata/bennett_15_archive/: chapters.ffmetadata  comment.txt  makepicturevideo2.bat  makepicturevideo3.bat
metadata/callahan_01_archive/: chapters.ffmetadata  chapters.tsv  comment.txt  people.tsv
metadata/callahan_02_archive/: chapters.ffmetadata  comment.txt  markers.mkvchapters.xml  markers.tsv  people.tsv  render_settings.json  subtitles.tsv
metadata/callahan_03_archive/: chapters.ffmetadata  chapters.tsv  comment.txt  markers.mkvchapters.xml  markers.tsv  render_settings.json
metadata/callahan_04_archive/: chapters.tsv  filter.avs  markers.mkvchapters.xml  subtitles.tsv
metadata/callahan_05_archive/: chapters.ffmetadata  markers.mkvchapters.xml  people.tsv
photoalbums/: .gitignore  AGENTS.md  SPEC.md  __init__.py  ai_models.toml  album_sets.toml  apply_metadata.py  bennett.py  cli.py  commands.py  common.py  create_metadata_tsv.py  exiftool_utils.py  incoming_scans_watcher.py  justfile  map_server.py  naming.py  requirements.txt  scanwatch.py  scanwatch_core.py  setup.py  sha3_tree_hashes.py  stitch_oversized_pages.py  stitch_oversized_pages_validate.py  terminal_images.py
photoalbums/data/: ai_index_china_view_manifest.jsonl  ai_index_manifest.jsonl  geocode_cache.json  trusted_xmp_locations.json
photoalbums/evals/: China_1986_B02_P03_stitched_v17_page_split.json  EasternEuropeSpainAndMorocco_1988_B00_P02_shared_location_date.json  EasternEuropeSpainMorocco_1988_B00_P14_landmark_naming.json  Family_1907-1946_B01_P05_D01_02_no_location.json  context_reasoning_poc_targets.json  london_shared_location_date_matrix.json
photoalbums/lib/: __init__.py  _caption_album.py  _caption_album_cover.py  _caption_album_inference.py  _caption_album_types.py  _caption_context.py  _caption_lmstudio.py  _caption_local_hf.py  _caption_matching.py  _caption_prompts.py  _caption_qwen.py  _caption_text.py  _docling_ocr.py  _docling_parser.py  _docling_pipeline.py  _gemma4_caption_matching.py  _lmstudio_helpers.py  _prompt_skill.py  ai_album_titles.py  ai_caption.py  ai_ctm_restoration.py  ai_date.py  ai_geocode.py  ai_index.py  ai_index_analysis.py  ai_index_args.py  ai_index_engine_cache.py  ai_index_propagate.py  ai_index_runner.py  ai_index_scan.py  ai_index_steps.py  ai_lmstudio_structured.py  ai_location.py  ai_metadata.py  ai_model_settings.py  ai_name_suggestions.py  ai_objects.py  ai_ocr.py  ai_orientation.py  ai_page_layout.py  (+29 more)
photoalbums/scripts/: _repair_args.py  caption_matching_debug.py  check_derived_names.py  check_pylint.py  compare_ocr.py  diagnose_region_captions.py  match_color_crops.py  migrate_corrected_captions_to_subjects.py  migrate_naming_v2.py  migrate_naming_v3.py  migrate_naming_v4.py  test.ps1  (+6 more)
photoalbums3/: README.md  __init__.py  engine.py  pipeline.py  server.py  ui.html
promptfoo_local/: README.md  assert.py  package-lock.json  package.json  promptfooconfig.yaml  provider.py  tests.py
scripts/: bootstrap_runtime.py  check_basedpyright.py  check_flake8.py  check_pylint.py  check_pyright.py  check_radon.py  check_ruff.py  check_skylos.py  check_vulture.py  normalize_xmp_newlines.py  pytest_config.py  start_sse.bat  test.ps1
skills/: AI_NAME_EXTRACTION_IMPLEMENTATION.md  CORDELL_PHOTO_ALBUMS.skill
tests/: test_immich_create_photo_albums.py  test_mcp_job_runner.py  test_mcp_server.py
vhs/: .gitignore  AGENTS.md  CAPTURE_GUIDE.md  CLAUDE.md  README.md  README.txt  common.py  freeze.py  justfile  requirements.txt  setup.py  tracking_loss.py  vhs.py  vhs_tuner.py
viewer/: README.md  _headers  app.js  config.json  gallery.json  index.html  scan_media.py  server.py  styles.css
(+478 files in other folders)
