[project]
name = "imago"
version = "0.1.0"
description = "Family media archive for VHS digitization, photo album preservation, and shared face IDs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "chardet<6",
  "colorlog",
  "diffusers",
  "docling",
  "insightface",
  "largestinteriorrectangle",
  "llvmlite",
  "lmstudio",
  "numba",
  "numpy",
  "onnxruntime",
  "opencv-contrib-python==4.10.0.84",
  "openai-whisper==20250625",
  "pandas",
  "pillow",
  "rembg[cpu]",
  "realrestorer-diffuser",
  "stitching",
  "tifffile",
  "torch==2.10.0",
  "tqdm",
  "transformers",
  "ultralytics",
  "wand",
  "watchdog",
  "qodo>=0.1.0",
  "requests",
]

[dependency-groups]
dev = [
  "basedpyright",
  "cosmic-ray>=8.4.6",
  "mutmut>=3.5.0",
  "opencv-stubs",
  "pytest",
  "pytest-cov>=7.1.0",
  "ruff",
  "skylos",
  "vulture",
]

[tool.uv]
package = false
exclude-dependencies = ["opencv-python", "opencv-python-headless"]

[tool.uv.sources]
diffusers = { git = "https://github.com/yfyang007/RealRestorer.git", rev = "fa2a3e3c23768eb94748c5855d83cc2e340ab13b", subdirectory = "diffusers" }
"realrestorer-diffuser" = { git = "https://github.com/yfyang007/RealRestorer.git", rev = "fa2a3e3c23768eb94748c5855d83cc2e340ab13b" }

[tool.pytest.ini_options]
testpaths = ["cast/tests", "photoalbums/tests", "vhs/test", "tests"]
pythonpath = ["."]
# On Windows, colored pytest output has intermittently surfaced as
# KeyboardInterrupt failures in photoalbums tests via colorama/console handling.
addopts = "--color=no -p scripts.pytest_config"
markers = [
  "integration: tests that require external services (LM Studio, network) — excluded from pre-push",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [".venv", "__pycache__"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # Pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort (import ordering)
  "N",    # pep8-naming
  "UP",   # pyupgrade (modern syntax)
  "B",    # flake8-bugbear
  "SIM",  # flake8-simplify
  "C4",   # flake8-comprehensions
  "RUF",  # ruff-specific rules
  "PT",   # flake8-pytest-style
  "C90",  # mccabe complexity
  "T20",  # flake8-print
  "RET",  # flake8-return
  "ARG",  # flake8-unused-arguments
  "PIE",  # flake8-pie
  "Q",    # flake8-quotes
  "TRY",  # tryceratops (exception handling)
  "PERF", # perflint (performance)
]
ignore = [
  "E203",    # whitespace before ':' (formatter handles it)
  "E501",    # line too long (line-length 120 handled by formatter)
  "F403",    # star imports
  "F405",    # undefined names from star imports
  "PT009",   # pytest-assert-* (assert argument ordering is stylistic)
  "PLR0913", # too many arguments
  "PLR0912", # too many branches
  "D",       # pydocstyle (project policy: no docstrings)
  "ANN",     # flake8-annotations (basedpyright handles type checking)
]

[tool.ruff.lint.per-file-ignores]
# sys.path manipulation before imports is intentional in standalone scripts and test files
"photoalbums/tests/*.py" = ["E402"]
"photoalbums/scripts/*.py" = ["E402", "T20"]
"photoalbums/lib/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"cast/**/*.py" = ["E402", "T20", "TRY003", "ARG001", "ARG002", "ARG005"]
"cast/tests/*.py" = ["E402", "T20", "TRY003", "ARG001", "ARG002", "ARG005", "N802"]
# CLI tools and scripts use print for user-facing output
"scripts/*.py" = ["T20"]
"vhs/scripts/*.py" = ["T20"]
"vhs/vhs_pipeline/*.py" = ["T20"]
"photoalbums/commands.py" = ["T20"]
"photoalbums/cli.py" = ["T20"]
# Pre-existing violations in photoalbums — suppressed until addressed systematically
"photoalbums/**/*.py" = [
  "E402", "F401", "RUF100", "T20",
  "ARG001", "ARG002", "ARG005",
  "B007", "B028", "B904", "B905",
  "C401", "C408",
  "N802", "N803", "N806", "N813", "N818",
  "PERF401", "PERF403",
  "PT017", "PT027",
  "RET504",
  "RUF001", "RUF002", "RUF003", "RUF005", "RUF012", "RUF015", "RUF046", "RUF059",
  "SIM102", "SIM103", "SIM108", "SIM110", "SIM117", "SIM201",
  "TRY003", "TRY004", "TRY300", "TRY301", "TRY400",
  "W291", "W293",
]
# Pre-existing violations in vhs — suppressed until addressed systematically
"vhs/**/*.py" = [
  "E402", "T20",
  "ARG001", "ARG002", "ARG005",
  "B007", "B905",
  "C401", "C414",
  "N802", "N806",
  "PERF102", "PERF401", "PERF403",
  "PIE810", "PT018",
  "RET503", "RET504",
  "RUF003", "RUF005", "RUF007", "RUF046", "RUF059",
  "SIM103", "SIM108", "SIM201",
  "TRY002", "TRY003", "TRY300",
  "W291",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.skylos]
max_lines = 200
